--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "hoek": "^5.0.3",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
-    "react-native-router-flux": "^4.0.0-beta.30"
+    "react-native-router-flux": "4.0.0-beta.27"
   }
 }
